Updating this code to work with Java 8 and the new endpoint API for future use in software testing